[metadata]
name=gaussian_fitting
description="Gaussian fitting package"
author="Samuel Bennett"

[options]
install_requires =
  numpy==1.21.6
  pandas==1.3.5
  scipy==1.11.1

setup_requires = setuptools_scm
packages = find:

[options.extras_require]
tests = 
  pytest
  pytest-cov
  pytest-mock
  flake8

[flake8]
max-line-length = 120
exclude =
  .git
  .idea
  */setup/*
  ./.eggs/*
  */tests/*
  __init__*
  __pycache__
  output
  bin
  envs
  venv
  build
  dist
